--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
 
   <h1>HTML Forms example</h1>
 
-  <form action="" method="POST">
+  <form action="" method="GET">
     <div>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name">
