--- a/form.html
+++ b/form.html
@@ -2,7 +2,17 @@
 <html>
 
 <head>
+<style>
+  h1 {
+    color: blue;
+    background-color: yellow;
+  }
+  p {
+    color: brown;
+    font-size: 4em;
+  }
 
+</style>
 </head>
 
 <body>
@@ -27,6 +37,8 @@
 
   <p>If you click the "Submit" button, the form-data will be sent back to this page.
     Usually, the action sends data to a different file with scripts that can process it.</p>
+
+  <p>some content</p>
 
 </body>
 
