referencing classes within other classes

--- a/sd2-week4/index.html
+++ b/sd2-week4/index.html
@@ -6,4 +6,8 @@
         // new keyword creates objects (class instances)
 
         console.log(s1, s2)
+
+        var l1 = new Lesson("Lisa", 218);
+
+        console.log(l1)
     </script>
