referencing classes within other classes

--- a/sd2-week4/index.html
+++ b/sd2-week4/index.html
@@ -3,11 +3,8 @@
     <script>
         var s1 = new Student("Loletta", "Lee", 1, 1998);
         var s2 = new Student("Kevin", "Chalmers", 2, 1980);
+        var l1 = new Lesson("Lisa", 218);
         // new keyword creates objects (class instances)
 
-        console.log(s1, s2)
-
-        var l1 = new Lesson("Lisa", 218);
-
-        console.log(l1)
+        console.log(s1, s2, l1)
     </script>
